# rpc_benchmark

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
grpc_client/: CMakeLists.txt  grpc_client.cpp
grpc_proto/: bidirectional.proto  gen.bat  gen.py  gen.sh
grpc_proto/gen-cpp/: bidirectional.grpc.pb.cc  bidirectional.grpc.pb.h  bidirectional.pb.cc  bidirectional.pb.h
grpc_server/: CMakeLists.txt  grpc_server.cpp
http3_pb3_rpc/: Cargo.toml
quic_pb3_rpc/src/: id_generator.rs  my_rpc_client.rs  my_rpc_server.rs  object_pool.rs  quick_rpc_client.rs  quick_rpc_service.rs
rimi_client/: CMakeLists.txt
rimi_server/: CMakeLists.txt
rimi_server/RimiServer/: RimiServer.ncb  RimiServer.sln
rimi_server/RimiServer/Debug/: RimiServer.exp  RimiServer.ilk  load_server.js
rimi_server/RimiServer/RimiClient/: RimiClient.vcproj
rimi_server/RimiServer/RimiClient/Debug/: BuildLog.htm  mt.dep  vc90.idb
rimi_server/RimiServer/RimiClient/src/: RimiClientObserver.cpp  RimiClientObserver.hpp  RimiLinkable.cpp  RimiLinkable.hpp  RimiTestProxier.cpp  RimiTestProxier.hpp  main.cpp
rimi_server/RimiServer/RimiServer/: RimiServer.vcproj
rimi_server/RimiServer/RimiServer/Debug/: BuildLog.htm  mt.dep  vc90.idb
rimi_server/RimiServer/include/: RimiServerCfg.hpp  RimiServerExp.hpp  RimiServerItf.hpp  RimiServerPkg.hpp
rimi_server/RimiServer/src/: JsRimiServer.cpp  JsRimiServer.hpp  RimiServer.cpp  RimiServer.hpp  RimiServerManager.cpp  RimiServerManager.hpp  RimiServerPkg.cpp  RimiTestItf.cpp  RimiTestItf.hpp
rimi_server/iil/: Makefile  RimiTestItf.idl  RimiTestProxier.inl  RimiTestServant.inl  RimiTestTypedefine.hpp
rsio_client/: CMakeLists.txt
rsio_server/: CMakeLists.txt  rsio_server.cpp
scripts/: 0.init.x64-windows-static.bat  1.cfg.cmake.x64-linux.txt  1.cfg.cmake.x64-windows-static.txt  2.gen.cmake.x64-windows-static.bat  3.build.cmake.x64-windows-static.bat
src/: CMakeLists.txt
src/grpc_client/: CMakeLists.txt  grpc_client.cpp
src/grpc_proto/: bidirectional.proto  gen.bat  gen.sh
src/grpc_proto/gen-cpp/: bidirectional.grpc.pb.cc  bidirectional.pb.cc  bidirectional.pb.h
src/grpc_server/: CMakeLists.txt  grpc_server.cpp
src/quic_pb3_rpc/: Cargo.toml  build.rs
src/quic_pb3_rpc/src/: bidirectional.proto  client.rs  my_rpc_client.rs  my_rpc_server.rs  my_rpc_service.rs  parser.rs  quick_rpc_client.rs  quick_rpc_service.rs  server.rs
src/rimi_client/: CMakeLists.txt
src/rimi_server/: CMakeLists.txt
src/rsio_client/: CMakeLists.txt  rsio_client.cpp
src/rsio_server/: CMakeLists.txt
src/thrift_client/: CMakeLists.txt  thrift_client.cpp
src/thrift_idl/: bidirectional.thrift  gen.bat  gen.sh
src/thrift_idl/gen-cpp/: BidirectionalService.cpp  BidirectionalService.h  bidirectional_types.cpp  bidirectional_types.h  thrif_server.cpp
src/thrift_server/: CMakeLists.txt
thrift_client/: CMakeLists.txt  thrift_client.cpp
thrift_idl/: bidirectional.thrift  gen.bat  gen.sh
thrift_idl/gen-cpp/: BidirectionalService.cpp  BidirectionalService.h  bidirectional_types.cpp  bidirectional_types.h  thrif_server.cpp
thrift_server/: CMakeLists.txt
