[package]
name = "quic_pb3_rpc"
version = "2024.6.28"
edition = "2021"


[[bin]]
name = "parser"
path = "src/parser.rs"


[[bin]]
name = "quic_pb3_rpc_server"
path = "src/server.rs"


[[bin]]
name = "quic_pb3_rpc_client"
path = "src/client.rs"



[dependencies]
anyhow = { version = "1.0.86" }
clap = { version = "4.5.7", features = ["derive"] }
directories-next = { version = "2.0.0" }
prost = { version = "0.12.6" }
prost-types = { version = "0.12.6" }
quinn = { version = "0.11.2" }
quinn-proto = { version = "0.11.3", default-features = false }
rcgen = { version = "0.13.1" }
rustls = { version = "0.23.10", features = ["ring"] }
rustls-pemfile = { version = "2.1.2" }
serde = { version = "1.0.203", features = ["derive"] }
structopt = { version = "0.3.26" }
time = { version = "0.3.36", features = ["formatting", "macros"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "sync"] }
tonic = { version = "0.11.0" }
tracing = { version = "0.1.40" }
tracing-futures = { version = "0.2.5" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time", "json"] }
url = { version = "2.5.2" }


[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }
